<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/credit_card_view"
        android:background="@drawable/visa_gradient"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/center_horizontal">

        <android.support.constraint.Guideline
            android:id="@+id/center_creditcard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/chip"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/chip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/visa_label"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/visa"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/card_number"
            app:fontFamily="@font/raleway"
            android:textSize="11sp"
            android:textColor="@color/payGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip" />

        <EditText
            android:id="@+id/card_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/raleway"
            android:hint="@string/card_number_input_hint"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_number" />

        <TextView
            android:id="@+id/card_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/raleway"
            android:layout_marginTop="30dp"
            android:text="@string/card_holder"
            android:textSize="11sp"
            android:textColor="@color/payGray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_number_input" />

        <EditText
            android:id="@+id/card_holder_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#fff"
            android:inputType="textCapWords"
            app:fontFamily="@font/raleway"
            android:hint="@string/card_holder_input"
            app:layout_constraintEnd_toStartOf="@+id/center_creditcard"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/card_holder"
            app:layout_constraintTop_toBottomOf="@+id/card_holder" />

        <TextView
            android:id="@+id/expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/raleway"
            android:textSize="11sp"
            android:layout_marginTop="30dp"
            android:text="@string/expiration_date"
            android:textColor="@color/payGray"
            app:layout_constraintStart_toStartOf="@+id/expiration_date_input"
            app:layout_constraintTop_toBottomOf="@+id/card_number_input" />

        <EditText
            android:id="@+id/expiration_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_date_input_hint"
            app:fontFamily="@font/raleway"
            android:layout_marginLeft="30dp"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/card_number_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center_creditcard"
            app:layout_constraintTop_toBottomOf="@+id/expiration_date" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline
        android:id="@+id/center_horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
    <android.support.constraint.ConstraintLayout
        android:background="@drawable/purchase_gradient"
        android:id="@+id/purchase_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/r_bold"
            android:id="@+id/purchase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="24sp"
            android:textColor="#8197d3"
            android:textFontWeight="700"
            android:text="@string/purchase" />

        <TextView
            android:id="@+id/payng_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="@string/payng_message"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/payGray"
            app:fontFamily="@font/raleway"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/purchase" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_layout">

        <View
            android:id="@+id/separator_vertical"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#ffedf3ff"
            app:layout_constraintBottom_toTopOf="@+id/total"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/separator_horizontal"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#ffedf3ff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total" />

        <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="20dp"
            app:fontFamily="@font/raleway"
            android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/payGray"
        app:layout_constraintRight_toRightOf="@+id/separator_vertical" />

        <TextView
            android:id="@+id/amount_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_holder"
            android:textSize="21sp"
            app:fontFamily="@font/r_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            android:textColor="@color/payBlu"
            android:textFontWeight="700"
            app:layout_constraintRight_toRightOf="@+id/separator_vertical" />

        <TextView
            android:id="@+id/shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/payGray"
            app:layout_constraintRight_toRightOf="parent"
            app:fontFamily="@font/raleway"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/separator_vertical" />

        <TextView
            android:id="@+id/shipping_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_holder"
            android:textSize="21sp"
            app:fontFamily="@font/r_bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            android:textColor="@color/payBlu"
            android:textFontWeight="700"
            app:layout_constraintLeft_toLeftOf="@+id/separator_vertical" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:fontFamily="@font/raleway"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:paddingTop="15dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/payGray"
            app:layout_constraintTop_toBottomOf="@+id/shipping_holder"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/total_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/r_bold"
            android:textSize="26sp"
            android:text="@string/total_holder"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textFontWeight="700"
            android:textColor="@color/payGreen"/>

        <Button
            android:id="@+id/make_payment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/payment_button"
            app:layout_constraintRight_toRightOf="parent"
            app:fontFamily="@font/r_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp"
            android:textColor="#fff"
            android:textSize="14sp"

            android:text="@string/make_payment_button" />


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>